load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "nsec3param",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    main_class = "no.norrs.nortools.tools.dnssec.nsec3param.Nsec3paramLookupKt",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/cli",
        "//lib/dns",
        "//lib/output",
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
        "@maven//:dnsjava_dnsjava",
    ],
)
