load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "tcp",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    main_class = "no.norrs.nortools.tools.network.tcp.TcpCheckKt",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/cli",
        "//lib/network",
        "//lib/output",
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
    ],
)
