load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "trace",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    main_class = "no.norrs.nortools.tools.network.trace.TraceToolKt",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/cli",
        "//lib/output",
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
    ],
)
